# embodied-arm-system

./: .gitignore  .gitmodules  README.md  diagnose_moveit_runtime.sh
docs/: EDULITE_A3平台搭建记录.md  gazebo_classic_spike.md  gazebo_perception.md  周报记录.md  机械臂具身操作研究综述.docx  机械臂具身操作综述_文献库.xlsx  续庆春-毕业设计（论文）任务书.docx  续庆春-毕业设计（论文）进度计划表.docx
docs/dev_logs/: 2026-07-09-motion-layer.md  2026-07-10-moveit-motion-interface-notes.md  2026-07-10-moveit-pose-ik.md  2026-07-11-gripper-rviz.md  2026-07-13-language-control-and-bringup.md  2026-07-13-perception-foundation.md  2026-07-13-task-manager.md  2026-07-14-gazebo-classic-perception.md  2026-07-15-day6-system-integration.md  2026-07-20-weekly-plan.md  2026-07-23-gazebo-startup-and-pick-place-status.md  本周规划.md
ros2_ws/src/embodied_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_bringup/launch/: gazebo_moveit_planning.launch.py  system.launch.py
ros2_ws/src/embodied_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/embodied_interfaces/action/: ExecuteTask.action  MoveToPose.action
ros2_ws/src/embodied_interfaces/msg/: DetectedObject.msg  DetectedObjectArray.msg  TaskCommand.msg
ros2_ws/src/embodied_interfaces/srv/: SetGripper.srv
ros2_ws/src/embodied_language/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_language/embodied_language/: command_parser.py  language_node.py
ros2_ws/src/embodied_language/test/: test_command_parser.py
ros2_ws/src/embodied_motion/: package.xml  setup.cfg  setup.py  test_compute_ik.py  test_fk_ik_roundtrip.py  test_goal_builder_manual.py  test_move_to_pose_relative.py
ros2_ws/src/embodied_motion/embodied_motion/: motion_executor_node.py  moveit_goal_builder.py
ros2_ws/src/embodied_motion/embodied_motion/config/: motion_config.yaml
ros2_ws/src/embodied_motion/test/: test_moveit_goal_builder.py
ros2_ws/src/embodied_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_perception/embodied_perception/: camera_info_from_image.py  colour_localizer.py  perception_node.py
ros2_ws/src/embodied_perception/test/: test_perception_node.py
ros2_ws/src/embodied_scene_sync/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/embodied_simulation/config/: gazebo_controllers.yaml  rgbd_perception.yaml
ros2_ws/src/embodied_simulation/launch/: dual_rgb_sim.launch.py  dual_usb_cameras.launch.py  rgbd_sim.launch.py  spawn_el_a3.launch.py  tabletop.launch.py
ros2_ws/src/embodied_simulation/urdf/: el_a3_sim.urdf.xacro  el_a3_sim_ros2_control.xacro
ros2_ws/src/embodied_simulation/worlds/: sorting_workcell.sdf  tabletop.sdf
ros2_ws/src/embodied_task/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_task/config/: pick_place.yaml
ros2_ws/src/embodied_task/embodied_task/: path_preflight.py  pick_place_geometry.py  reachability_diagnosis.py  task_manager_node.py
ros2_ws/src/embodied_task/test/: test_pick_place_geometry.py
ros2_ws/src/gazebo_classic_gripper_mimic/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_classic_gripper_mimic/src/: gripper_mimic_plugin.cpp
ros2_ws/src/gazebo_classic_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/gazebo_classic_sim/config/: controllers.yaml  dual_rgb_perception.yaml
ros2_ws/src/gazebo_classic_sim/gazebo_classic_sim/: __init__.py  classic_bringup.py  usb_camera_publisher.py
ros2_ws/src/gazebo_classic_sim/launch/: classic_dual_rgb_sim.launch.py  classic_dual_usb_cameras.launch.py  classic_el_a3.launch.py  classic_rgbd_sim.launch.py
ros2_ws/src/gazebo_classic_sim/resource/: gazebo_classic_sim
ros2_ws/src/gazebo_classic_sim/scripts/: classic_robot_description.py
ros2_ws/src/gazebo_classic_sim/worlds/: classic_dual_rgb_workbench.world  el_a3_workbench.world
