<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>embodied_bringup</name>
  <version>0.0.0</version>

  <description>
    Launch and bringup package for the embodied robotic arm system
  </description>

  <maintainer email="18649501318@163.com">
    liyu
  </maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>embodied_motion</exec_depend>
  <exec_depend>embodied_language</exec_depend>
  <exec_depend>el_a3_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>