<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>embodied_simulation</name>
  <version>0.0.0</version>
  <description>Gazebo simulation environment for the embodied arm system</description>
  <maintainer email="18649501318@163.com">liyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>gz_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <exec_depend>el_a3_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
