<?xml version="1.0"?>
<package format="3">
  <name>gazebo_classic_sim</name>
  <version>0.1.0</version>
  <description>Minimal Gazebo Classic validation for the EDULITE A3.</description>
  <maintainer email="liyu@example.com">liyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_classic_gripper_mimic</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>el_a3_description</exec_depend>
  <exec_depend>embodied_perception</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
